wpn_nginx.yml
---
# https://erpdev.atlassian.net/browse/WPN-28
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wpn-nginx
  namespace: wordpress-test
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wpn-nginx
  strategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: wpn-nginx
    spec:
      containers:
        - name: wpn-nginx
          image: quay-its.epfl.ch/svc0041/wpn-nginx:2024-006
          ports:
            - containerPort: 8080
              protocol: TCP
      imagePullSecrets:
        - name: svc0041-rke2-puller-pull-secret
      restartPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: wpn-nginx-service
  namespace: wordpress-test
  labels:
    app: wpn-nginx
  annotations:
    authors: isas-fsd
spec:
  ports:
  - name: "80"
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    app: wpn-nginx
  type: ClusterIP

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wpn-nginx
  namespace: wordpress-test
spec:
  rules:
    # We can access pod though any worker because of the RKE2 default
    # configuration, which uses NGINX using a DaemonSet.
    - host: itswbhst0018.xaas.epfl.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wpn-nginx-service
                port:
                  number: 80
    - host: itswbhst0020.xaas.epfl.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wpn-nginx-service
                port:
                  number: 80
